// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`detect cycle > should detect 1-task-cycle 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-8
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-8</Yellow></BoldDim> → <Bold><Yellow>root:cycle-8</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;

exports[`detect cycle > should detect 2-tasks-cycle 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-6
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-6</Yellow></BoldDim> → <Bold><Yellow>root:cycle-7</Yellow></BoldDim> → <Bold><Yellow>root:cycle-6</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;

exports[`detect cycle > should detect 2-tasks-cycle 2`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-7
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-7</Yellow></BoldDim> → <Bold><Yellow>root:cycle-6</Yellow></BoldDim> → <Bold><Yellow>root:cycle-7</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;

exports[`detect cycle > should detect cycle from a task inside the cycle 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-2
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-2</Yellow></BoldDim> → <Bold><Yellow>root:cycle-3</Yellow></BoldDim> → <Bold><Yellow>root:cycle-4</Yellow></BoldDim> → <Bold><Yellow>root:cycle-5</Yellow></BoldDim> → <Bold><Yellow>root:cycle-2</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;

exports[`detect cycle > should detect cycle from a task outside the cycle 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-1
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-2</Yellow></BoldDim> → <Bold><Yellow>root:cycle-3</Yellow></BoldDim> → <Bold><Yellow>root:cycle-4</Yellow></BoldDim> → <Bold><Yellow>root:cycle-5</Yellow></BoldDim> → <Bold><Yellow>root:cycle-2</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;

exports[`detect cycle > should print the cycle from the first reach task 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.cycle.ts cycle-4
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.cycle.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Cycle detected in task <Bold><Yellow>root:cycle-4</Yellow></BoldDim> → <Bold><Yellow>root:cycle-5</Yellow></BoldDim> → <Bold><Yellow>root:cycle-2</Yellow></BoldDim> → <Bold><Yellow>root:cycle-3</Yellow></BoldDim> → <Bold><Yellow>root:cycle-4</Yellow></BoldDim>. Please resolve the cycle before executing tasks.
`;
